--- a/src/pages/brevkasse.astro
+++ b/src/pages/brevkasse.astro
@@ -11,37 +11,59 @@ import UnderlinedHeader from "../components/ui/UnderlinedHeader.astro";
 <GirlsUniLayout title="Brevkasse">
   <div class="brevkasselayout">
     <ColorSection color="pink" title="GirlTalk's brevkasse">
-      
-      <p>Har du nogle tanker, du har brug for at få ud af hovedet, så de fylder mindre?</p>
-      <p>Del dem med os her eller læs andre pigers spørgsmål, følelser og oplevelser.</p>
+      <p></p>
+        Har du nogle tanker, du har brug for at få ud af hovedet, så de fylder
+        mindre?
+      </p>
+      <p>
+        Del dem med os her eller læs andre pigers spørgsmål, følelser og
+        oplevelser.
+      </p>
       <Button size="small" text="Click me" />
     </ColorSection>
-    <UnderlinedHeader header="Læs andre pigers tanker" class="subheader"></UnderlinedHeader>
-  <div>
-    <div class="searchcontainer">
-          <p class="light-text searchcopy">Søg efter breve</p>
-          <SearchBar></SearchBar>
+    <UnderlinedHeader header="Læs andre pigers tanker" class="subheader" />
+
+    <div>
+      <p class="light-text searchcopy">Søg efter breve</p>
+      <SearchBar />
     </div>
-      <Dropdown></Dropdown>
-  </div>
+    <div class="dropdowncontainer">
+      <Dropdown />
+    </div>
     <p class="indicator">8 ud af 129</p>
     <div class="lettercontainer">
-      <BrevkasseCard header="Jeg har opdaget at min datter kaster op inden hun går i seng" />
-      <BrevkasseCard header="Jeg har opdaget at min datter kaster op inden hun går i seng" />
-      <BrevkasseCard header="Jeg har opdaget at min datter kaster op inden hun går i seng" />
-      <BrevkasseCard header="Jeg har opdaget at min datter kaster op inden hun går i seng" />
-      <BrevkasseCard header="Jeg har opdaget at min datter kaster op inden hun går i seng" />
-      <BrevkasseCard header="Jeg har opdaget at min datter kaster op inden hun går i seng" />
-      <BrevkasseCard header="Jeg har opdaget at min datter kaster op inden hun går i seng" />
-      <BrevkasseCard header="Jeg har opdaget at min datter kaster op inden hun går i seng" />
+      <BrevkasseCard
+        header="Jeg har opdaget at min datter kaster op inden hun går i seng"
+      />
+      <BrevkasseCard
+        header="Jeg har opdaget at min datter kaster op inden hun går i seng"
+      />
+      <BrevkasseCard
+        header="Jeg har opdaget at min datter kaster op inden hun går i seng"
+      />
+      <BrevkasseCard
+        header="Jeg har opdaget at min datter kaster op inden hun går i seng"
+      />
+      <BrevkasseCard
+        header="Jeg har opdaget at min datter kaster op inden hun går i seng"
+      />
+      <BrevkasseCard
+        header="Jeg har opdaget at min datter kaster op inden hun går i seng"
+      />
+      <BrevkasseCard
+        header="Jeg har opdaget at min datter kaster op inden hun går i seng"
+      />
+      <BrevkasseCard
+        header="Jeg har opdaget at min datter kaster op inden hun går i seng"
+      />
     </div>
   </div>
 </GirlsUniLayout>
 
 <style>
-
-
-
+  .dropdowncontainer {
+    width: 263px;
+  }
   .searchcopy {
     color: var(--color-black-ish);
     opacity: var(--opacity-75);
@@ -49,8 +71,9 @@ import UnderlinedHeader from "../components/ui/UnderlinedHeader.astro";
   .indicator {
     color: var(--color-black-ish);
     opacity: var(--opacity-50);
-    margin-bottom: var(--spacing-xl);
-    margin-top: var(--spacing-xl);
+    margin-bottom: var(--spacing-small);
+      margin-top: var(--spacing-small);
+    
   }
   .lettercontainer {
     display: flex;
@@ -65,21 +88,22 @@ import UnderlinedHeader from "../components/ui/UnderlinedHeader.astro";
     flex-direction: column;
     margin-top: var(--spacing-small);
     margin-bottom: var(--spacing-small);
-
   }
 
-  
-  @media only screen and (max-width: 600px) {
+  @media only screen and (min-width: 600px) {
     .indicator {
-    
-    margin-bottom: var(--spacing-small);
-    margin-top: var(--spacing-small);
-  }
-          
-  .searchcontainer {
-    height: 100px;
+      margin-bottom: var(--spacing-xl);
+    margin-top: var(--spacing-xl);
+    }
+    .dropdowncontainer {
     width: 100%;
   }
-}
 
+
+    /* .searchcontainer {
+      height: 100px;
+      width: 100%;
+     
+    } */
+  }
 </style>
