--- a/src/components/ui/Dropdown.astro
+++ b/src/components/ui/Dropdown.astro
@@ -61,8 +61,9 @@ import Button from "./Button.astro";
             display: flex;
             justify-content: center;
             flex-wrap: wrap;
-            width: 1000px;
+            max-width: 1000px;
             gap: 2rem;
+            margin: auto;
         }    
 
          @media only screen and (min-width: 600px) {
