--- a/src/components/ui/Dropdown.astro
+++ b/src/components/ui/Dropdown.astro
@@ -2,13 +2,13 @@
 import Button from "./Button.astro";
 ---
     <div class="desktopfilter">
-      <Button size="medium" style="purple" text="Venskaber og familie" />
-      <Button size="medium" style="purple" text="Krop og sex" />
-      <Button size="medium" style="purple" text="Selvværd" />
-      <Button size="medium" style="purple" text="Kærlighed" />
-      <Button size="medium" style="purple" text="Trivsel" />
-      <Button size="medium" style="purple" text="Skole og uddannelse" />
-      <Button size="medium" style="purple" text="Andet" />
+      <Button size="m-extra-small-d-medium" style="purple" text="Venskaber og familie" />
+      <Button size="m-extra-small-d-medium" style="purple" text="Krop og sex" />
+      <Button size="m-extra-small-d-medium" style="purple" text="Selvværd" />
+      <Button size="m-extra-small-d-medium" style="purple" text="Kærlighed" />
+      <Button size="m-extra-small-d-medium" style="purple" text="Trivsel" />
+      <Button size="m-extra-small-d-medium" style="purple" text="Skole og uddannelse" />
+      <Button size="m-extra-small-d-medium" style="purple" text="Andet" />
     </div>
 
     
