--- a/src/components/ui/NavPrimary.astro
+++ b/src/components/ui/NavPrimary.astro
@@ -214,6 +214,7 @@ margin: auto;
   overflow: hidden;
   transition: all 0.3s ease-in-out;
   transform: scale(0);
+  z-index: 150;
 }
 .nav-wrapper {
   position: relative;
