--- a/src/components/ui/NavSecondary.astro
+++ b/src/components/ui/NavSecondary.astro
@@ -237,6 +237,7 @@ margin-left: auto;
   overflow: hidden;
   transition: all 0.3s ease-in-out;
   transform: scale(0);
+  z-index: 150;
 }
 .nav-wrapper {
   position: relative;
