improved ColorSection and LayoutChanges

--- a/src/components/ui/Button.astro
+++ b/src/components/ui/Button.astro
@@ -63,7 +63,10 @@ const { link, text, style = "dark", size = "m-small-d-large" } = Astro.props;
   }
 
   .dark:hover {
-    color: var(--color-green);
+    color: var(--color-black);
+    background-color: var(--color-off-white);
+    border: 3px solid var(--color-black-ish);
+
   }
 
   .light {
