--- a/src/pages/faellesskaber.astro
+++ b/src/pages/faellesskaber.astro
@@ -30,7 +30,7 @@ import ColorSection from "../components/ui/ColorSection.astro";
       </p>
       <p>To frivillige unge kvinder leder EmpowR og sørger for at det er trygt og rart at være med.</p>
     </ColorSection>
-	<ColorSection color="pink" title="Sisterhood" hex="#d1ff99" text="Timeld Sisterhood" link="/">
+	<ColorSection color="pink" title="Sisterhood" hex="#ffe4ee" text="Timeld Sisterhood" link="/">
 		<p slot="subheader">For dig mellem 18-24, som er indskrevet på en uddannelse.</p>
 		<p slot="description">
 		  I EmpowR mødes du med en lille gruppe piger mellem 13 og 16 år én gang om ugen i 10 uger tæt på, hvor du bor. I taler om alt det, der fylder. Det kan være venskaber, ensomhed, kærlighed og andre emner. Her vil du opdage, at der er så meget,
@@ -38,7 +38,7 @@ import ColorSection from "../components/ui/ColorSection.astro";
 		</p>
 		<p slot="description">To frivillige unge kvinder leder EmpowR og sørger for at det er trygt og rart at være med.</p>
 	  </ColorSection>
-	  <ColorSection color="purple" title="Velux" hex="#d1ff99" text="Timeld Velux" link="/">
+	  <ColorSection color="purple" title="Velux" hex="#edcff8" text="Timeld Velux" link="/">
 		<p slot="subheader">For dig mellem 18-24, som ikke er indskrevet på en uddannelse.</p>
 		<p slot="description">
 		  I EmpowR mødes du med en lille gruppe piger mellem 13 og 16 år én gang om ugen i 10 uger tæt på, hvor du bor. I taler om alt det, der fylder. Det kan være venskaber, ensomhed, kærlighed og andre emner. Her vil du opdage, at der er så meget,
