--- a/src/components/ui/ColorSection.astro
+++ b/src/components/ui/ColorSection.astro
@@ -69,7 +69,7 @@ const { link, text, size = "m-small-d-large" } = Astro.props;
   }
 
   .description {
-    border-radius: 8px 0 8px 8px;
+    border-radius: 8px 0 0 0;
   }
 
   .button-wrapper {
@@ -77,6 +77,7 @@ const { link, text, size = "m-small-d-large" } = Astro.props;
     padding-right: 40px;
     display: flex;
     justify-content: center;
+    border-radius: 0 0 8px 8px;
   }
 
 
