--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -27,6 +27,14 @@ const { title = "GirlTalk" } = Astro.props;
 <style>
 
   main {
-    margin: 0 20px;
+    margin: 100px 20px 40px 20px;
   }
+
+  @media only screen and (min-width: 600px) {
+    main {
+    margin: 70px 20px 80px 20px;
+  }
+  }
+
+
 </style>
