--- a/src/layouts/GirlsUniLayout.astro
+++ b/src/layouts/GirlsUniLayout.astro
@@ -26,8 +26,13 @@ const { title = "GirlTalk" } = Astro.props;
 </html>
 
 <style>
-
   main {
-    margin: 0 20px;
+    margin: 100px 20px 40px 20px;
+  }
+
+  @media only screen and (min-width: 600px) {
+    main {
+    margin: 70px 20px 80px 20px;
+  }
   }
 </style>
