brevkasse done from filtering and down

--- a/src/components/ui/Dropdown.astro
+++ b/src/components/ui/Dropdown.astro
@@ -1,15 +1,21 @@
 ---
 import Button from "./Button.astro";
 ---
-    <div class="desktopfilter">
-      <Button size="m-extra-small-d-medium" style="purple" text="Venskaber og familie" />
-      <Button size="m-extra-small-d-medium" style="purple" text="Krop og sex" />
-      <Button size="m-extra-small-d-medium" style="purple" text="Selvværd" />
-      <Button size="m-extra-small-d-medium" style="purple" text="Kærlighed" />
-      <Button size="m-extra-small-d-medium" style="purple" text="Trivsel" />
-      <Button size="m-extra-small-d-medium" style="purple" text="Skole og uddannelse" />
-      <Button size="m-extra-small-d-medium" style="purple" text="Andet" />
-    </div>
+
+<div class="desktop-filter-container">
+  
+    <p class="label-text light-text hidetext">Filtrér efter tema</p>    
+        <div class="desktopfilter">
+          <Button size="m-extra-small-d-medium" style="purple" text="Venskaber og familie" />
+          <Button size="m-extra-small-d-medium" style="purple" text="Krop og sex" />
+          <Button size="m-extra-small-d-medium" style="purple" text="Selvværd" />
+          <Button size="m-extra-small-d-medium" style="purple" text="Kærlighed" />
+          <Button size="m-extra-small-d-medium" style="purple" text="Trivsel" />
+          <Button size="m-extra-small-d-medium" style="purple" text="Skole og uddannelse" />
+          <Button size="m-extra-small-d-medium" style="purple" text="Andet" />
+        </div>
+  
+</div>
 
     
     <div class="mobilefilter">
@@ -55,25 +61,39 @@ import Button from "./Button.astro";
         .label-text {
           margin-bottom: 10px;
           font-family: var(--font-display);
+          color: var(--color-black-ish);
+          opacity: var(--opacity-75);
         }
 
         .desktopfilter {
             display: flex;
             justify-content: center;
             flex-wrap: wrap;
-            max-width: 1000px;
+            /* max-width: 1000px; */
             gap: 2rem;
-            margin: auto;
-        }    
+            /* margin: auto; */
+        }   
+        
+        .hidetext {
+          padding-left: 5%;
+        }
 
          @media only screen and (min-width: 600px) {
             
             .mobilefilter{
             display: none;
             }
+
+            .desktop-filter-container {
+              max-width: 1000px;
+              margin: auto;
+            }
+            
          }
          @media only screen and (max-width: 600px) {
-            
+          .hidetext {
+              display: none;
+            }
             .desktopfilter{
             display: none;
             }
