--- a/src/pages/brevkasse.astro
+++ b/src/pages/brevkasse.astro
@@ -80,6 +80,7 @@ import UnderlinedHeader from "../components/ui/UnderlinedHeader.astro";
     flex-wrap: wrap;
     justify-content: center;
     gap: var(--spacing-small);
+    max-width: 1150px;
   }
 
   .brevkasselayout {
