--- a/src/components/ui/ColorSection.astro
+++ b/src/components/ui/ColorSection.astro
@@ -38,12 +38,11 @@ const { link, text, size = "m-small-d-large" } = Astro.props;
 
 /* COLOR SECTION */
 .ColorSection {
-  margin-bottom: var(--spacing-medium);
+  margin-top: var(--spacing-medium);
 }
 
   .flex-container {
     display: flex;
-
   }
 
   h2 {
