--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,15 +8,7 @@ import ColorSection from "../components/ui/ColorSection.astro"
 ---
 <BaseLayout title="GirlTalk">
 	<section>
-		<h1>Du er altid god nok</h1>
-		<h2>... men vi er her, når du bliver i tvivl</h2>
+		<h1 class="primary-header">Du er altid god nok</h1>
+		<h2 class="subheader">... men vi er her, når du bliver i tvivl</h2>
 	</section>
-<div>
-	<Button text="Go to Girls Universe" link="/main" size="extra-large"/>
-</div>
-<ColorSection color="green" title="EmpowR" >
-	<p>I EmpowR mødes du med en lille gruppe piger mellem 13 og 16 år én gang om ugen i 10 uger tæt på, hvor du bor.
-		I taler om alt det, der fylder. Det kan være venskaber, ensomhed, kærlighed og andre emner. Her vil du opdage, at der er så meget, som faktisk er helt normalt, at andre kan have det ligesom dig, og at det hjælper at tale om det.</p>
-		<p>To frivillige unge kvinder leder EmpowR og sørger for at det er trygt og rart at være med.</p>
-</ColorSection>
 	</BaseLayout>
