--- a/src/pages/om-os.astro
+++ b/src/pages/om-os.astro
@@ -1,9 +1,127 @@
 ---
-import BaseLayout from "../layouts/BaseLayout.astro"
-
+import BaseLayout from "../layouts/BaseLayout.astro";
 ---
+
 <BaseLayout title="Om os">
-	<section>
-		<p>Om os</p>
-	</section>
-	</BaseLayout>
+  <section class="layoutstyle">
+    <div class="section">
+      <div class="image-container-desktop hide-mobile">
+      	<img
+	        class="image-desktop"
+	        src="images/heroimages/girl-sitting-alone.png"
+	        alt="Pige sidder med hoved lænende på hænder"
+	      />
+      </div>
+      <div class="text-section">
+        <h1 class="primary-header">Om GirlTalk</h1>
+        <h2 class="subheader">Ingen piger skal mistrives</h2>
+        <p>
+          GirlTalk blev skabt i 2004 ud fra visionen om at give piger et sted at
+          gå hen, når livet er svært. <br /> Det er desværre et trist faktum, at
+          mistrivslen blandt unge i Danmark stiger, og at pigerne er hårdest ramt.
+          <br /> I samarbejde med vores mange støtter og samarbejdspartnere arbejder
+          vi for at bremse den udvikling og for at sikre, at alle piger har en at
+          tale med.
+        </p>
+      </div>
+      <div class="image-container-mobile hide-desktop">
+      	<img
+	        class="image-mobile"
+	        src="images/heroimages/girl-sitting-alone-small.png"
+	        alt="Pige sidder med hoved lænende på hænder"
+	      />
+      </div>
+    </div>
+
+    <!-- <div class="section section-2">
+      <img
+        class="image-desktop hide-mobile"
+        src="images/heroimages/girl-sitting-alone.png"
+        alt="Pige sidder med hoved lænende på hænder"
+      />
+      <div class="text-section">
+        <h2 class="subheader">Hvem kontakter GirlTalk?</h2>
+        <p>
+          GirlTalks målgruppe er piger og unge kvinder i alderen 12 til 24 år.
+          Hos GirlTalk er intet problem for stort eller for småt. <br> Nogle
+          kontakter os, fordi de har det svært i skolen, nogle har spørgsmål til
+          krop og pubertet, mens andre oplever psykiske udfordringer. Nogle
+          kontakter os enkelte eller få gange, mens andre har glæde af at tale
+          med vores rådgivere mere regelmæssigt over en periode.
+        </p>
+      </div>
+      <div class="image-container">
+      	<img
+	        class="image-mobile hide-desktop"
+	        src="images/heroimages/girl-sitting-alone-small.png"
+	        alt="Pige sidder med hoved lænende på hænder"
+	      />
+      </div>
+    </div> -->
+  </section>
+</BaseLayout>
+
+<style>
+  .layoutstyle {
+    margin-top: var(--spacing-small);
+    margin-bottom: var(--spacing-small);
+  }
+
+  .section-1 {
+    margin-top: var(--spacing-2xl);
+    display: flex;
+    gap: var(--spacing-small);
+    flex-direction: column;
+  }
+
+  .text-section {
+    display: flex;
+    gap: var(--spacing-small);
+    flex-direction: column;
+  }
+
+  .image-mobile {
+	width: 100%;
+	height: 100%;
+  }
+
+  .image-container-mobile {
+    max-width: 400px;
+    height: 100%;
+  }
+
+  @media only screen and (min-width: 1000px) {
+    .hide-desktop {
+      display: none;
+    }
+
+    .layoutstyle {
+      margin-left: var(--spacing-3xl);
+      margin-right: var(--spacing-3xl);
+    }
+
+    
+
+    .section {
+		display: flex;
+      flex-direction: row;
+      gap: var(--spacing-large);
+    }
+  }
+
+  @media only screen and (max-width: 1000px) {
+    .hide-mobile {
+      display: none;
+    }
+
+	.image-container-desktop {
+		width: 350px;
+      height: 200px;
+	}
+
+	.image-desktop {
+      width: 100%;
+      height: 100%;
+    }
+  }
+</style>
