--- a/src/components/cards/Category.astro
+++ b/src/components/cards/Category.astro
@@ -2,12 +2,12 @@
 const { category, header  } = Astro.props;
 ---
 <div class="Category">
-<p class="theme-header">● {category}</p>
-<p class="theme-header">{header}</p>
+<p class="themeheader">● {category}</p>
+<p class="themeheader">{header}</p>
 </div>
 
 <style>
 p {
-    margin-bottom: var(--spacing-xs)
+    margin-bottom: 5px;
 }
 </style>
