--- a/src/pages/medier.astro
+++ b/src/pages/medier.astro
@@ -18,7 +18,7 @@ import ArticleCard from "../components/cards/ArticleCard.astro"
 </div>
 
 <div>
-	
+	<h2 class="sub-header-underlined">Tema: Venskaber og Familie</h2>
 	<section class="medier-second-grid">
 		<img src="" alt="">
 		<img src="" alt="">
@@ -91,5 +91,16 @@ max-width: 600px;
 .subheader-firstarticle{
 	font-size: var(--font-size-large);
     }
+
+	.sub-header-underlined{
+font-family: var(--font-display);
+font-weight: var(--font-weight-semibold);
+font-size: var(font-size-large);
+align-self: flex-start;
+border-bottom: 2px solid var(--color-black-ish);
+width: 100%;
+margin-bottom: 20px;
+}
+
 }
 	</style>
