--- a/src/pages/medier.astro
+++ b/src/pages/medier.astro
@@ -17,14 +17,14 @@ import ArticleCard from "../components/cards/ArticleCard.astro"
 	</section>
 </div>
 
-<div>
+<!-- <div>
 	<h2 class="sub-header-underlined">Tema: Venskaber og Familie</h2>
 	<section class="medier-second-grid">
-		<img src="" alt="">
-		<img src="" alt="">
-		<img src="" alt="">
+		<img src="images/articleimages/bananaarticle.png" alt="">
+		<a href="#"><ArticleCard header="Kropsidealer - Hvordan påvirker de os?" category="Venskaber og familie" link="images/articleimages/redbluegirlarticle.jpg" /></a>
+		<a href="#"><ArticleCard header="Hvordan onanerer man?" category="Venskaber og familie" link="images/articleimages/banana.jpg" /></a>
 	</section>
-</div>
+</div> -->
 	</GirlsUniLayout>
 
 	<style>
