--- a/src/components/cards/ArticleCard.astro
+++ b/src/components/cards/ArticleCard.astro
@@ -18,7 +18,7 @@ div.ArticleCard {
     width: 220px;
 }
 
-img{
+.ArticleCard img{
     height: 280px;
     width: fit-content;
     border-radius: 8px;
@@ -26,7 +26,7 @@ img{
 
 @media only screen and (min-width: 900px){
     .ArticleCard {
-    width: 350px;
+    width: 310px;
 }
 
 .ArticleCard img{
