--- a/src/pages/om-os.astro
+++ b/src/pages/om-os.astro
@@ -1,16 +1,17 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
+import BoxColor from "../components/ui/BoxColor.astro";
 ---
 
 <BaseLayout title="Om os">
   <section class="layoutstyle">
     <div class="section">
       <div class="image-container-desktop hide-mobile">
-      	<img
-	        class="image-desktop"
-	        src="images/heroimages/girl-sitting-alone.png"
-	        alt="Pige sidder med hoved lænende på hænder"
-	      />
+        <img
+          class="image-desktop"
+          src="images/heroimages/girl-sitting-alone.png"
+          alt="Pige sidder med hoved lænende på hænder"
+        />
       </div>
       <div class="text-section">
         <h1 class="primary-header">Om GirlTalk</h1>
@@ -25,39 +26,78 @@ import BaseLayout from "../layouts/BaseLayout.astro";
         </p>
       </div>
       <div class="image-container-mobile hide-desktop">
-      	<img
-	        class="image-mobile"
-	        src="images/heroimages/girl-sitting-alone-small.png"
-	        alt="Pige sidder med hoved lænende på hænder"
-	      />
+        <img
+          class="image-mobile"
+          src="images/heroimages/girl-sitting-alone-small.png"
+          alt="Pige sidder med hoved lænende på hænder"
+        />
       </div>
     </div>
 
-    <!-- <div class="section section-2">
-      <img
-        class="image-desktop hide-mobile"
-        src="images/heroimages/girl-sitting-alone.png"
-        alt="Pige sidder med hoved lænende på hænder"
-      />
+    <div class="section-2">
+      <div class="image-container-desktop hide-mobile">
+        <img
+          class="image-desktop"
+          src="images/heroimages/girls-piggyride.png"
+          alt="Pige sidder med hoved lænende på hænder"
+        />
+      </div>
       <div class="text-section">
-        <h2 class="subheader">Hvem kontakter GirlTalk?</h2>
+        <h2 class="secondary-header">Hvem kontakter GirlTalk?</h2>
         <p>
           GirlTalks målgruppe er piger og unge kvinder i alderen 12 til 24 år.
-          Hos GirlTalk er intet problem for stort eller for småt. <br> Nogle
-          kontakter os, fordi de har det svært i skolen, nogle har spørgsmål til
-          krop og pubertet, mens andre oplever psykiske udfordringer. Nogle
-          kontakter os enkelte eller få gange, mens andre har glæde af at tale
-          med vores rådgivere mere regelmæssigt over en periode.
+          Hos GirlTalk er intet problem for stort eller for småt. <br /> Nogle kontakter
+          os, fordi de har det svært i skolen, nogle har spørgsmål til krop og pubertet,
+          mens andre oplever psykiske udfordringer. Nogle kontakter os enkelte eller
+          få gange, mens andre har glæde af at tale med vores rådgivere mere regelmæssigt
+          over en periode.
         </p>
       </div>
-      <div class="image-container">
-      	<img
-	        class="image-mobile hide-desktop"
-	        src="images/heroimages/girl-sitting-alone-small.png"
-	        alt="Pige sidder med hoved lænende på hænder"
+      <div class="image-container-mobile hide-desktop">
+        <img
+          class="image-mobile"
+          src="images/heroimages/girls-piggyride-small.png"
+          alt="Pige sidder med hoved lænende på hænder"
+        />
+      </div>
+    </div>
+
+    <div class="section-3">
+      <div class="width-box">
+      	<BoxColor
+	        color="green"
+	        title="Kvalitetsmærke på GirlTalks rådgivning"
+	        text="GirlTalk er i 2021 blevet genakkrediteret af RådgivningsDanmark, som er brancheforening for sociale rådgivningstilbud i Danmark. Akkrediteringen er et særligt kvalitetsstempel på arbejdet i rådgivningen."
 	      />
       </div>
-    </div> -->
+      <div class="text-section-3">
+        <h2>Hvilke tilbud har GirlTalk?</h2>
+		<div class="body-text-section-3">
+          <p>
+            GirlTalk har mange forskellige tilbud og indsatser til forskellige
+            alders- og målgrupper.
+          </p>
+          <ul>
+            <li>
+             <a href="brevkasse.html"> Vi rådgiver unge på chat, sms og i vores brevkasse.</a>
+            </li><li>
+              Vi holder foredrag for både unge, forældre og fagpersoner
+            </li>
+            <li>
+              Vi faciliterer fysiske tilbud i form af vores gruppeforløb
+              Sisterhood og EmpowR
+            </li>
+            <li>
+              Herudover rådgiver vi også forældre i vores voksenrådgivning
+            </li>
+          </ul>
+          <p>
+            Derudover har vi også en omfattende indsats på vores sociale medier
+            i form af YouTube og Podcast, Instagram, TikTok og Facebook.
+          </p>
+        </div>
+      </div>
+    </div>
   </section>
 </BaseLayout>
 
@@ -67,27 +107,57 @@ import BaseLayout from "../layouts/BaseLayout.astro";
     margin-bottom: var(--spacing-small);
   }
 
-  .section-1 {
-    margin-top: var(--spacing-2xl);
+  .section {
+    margin-top: var(--spacing-medium);
     display: flex;
     gap: var(--spacing-small);
     flex-direction: column;
+  }
+
+  .section-2 {
+    margin-top: var(--spacing-medium);
+    display: flex;
+    gap: var(--spacing-small);
+    flex-direction: column;
+  }
+
+  .section-3{
+	margin-top: var(--spacing-small);
+	display: flex;
+	flex-direction: column;
   }
 
   .text-section {
     display: flex;
-    gap: var(--spacing-small);
+    gap: var(--spacing-xs);
     flex-direction: column;
   }
 
+  .text-section-3 {
+	margin-top: var(--spacing-small);
+  }
+
+  .text-section-3 ul {
+	padding-left: 5%;
+	font-family: var(--font-body);
+  }
+
+  .body-text-section-3 {
+	display: flex;
+	flex-direction: column;
+	gap: var(--spacing-xs);
+	margin-top: var(--spacing-small);
+  }
+
   .image-mobile {
-	width: 100%;
-	height: 100%;
+    width: 100%;
+    height: 100%;
   }
 
   .image-container-mobile {
     max-width: 400px;
     height: 100%;
+	margin: auto;
   }
 
   @media only screen and (min-width: 1000px) {
@@ -100,28 +170,45 @@ import BaseLayout from "../layouts/BaseLayout.astro";
       margin-right: var(--spacing-3xl);
     }
 
-    
+    .image-container-desktop {
+      width: 70%;
+    }
+    .image-desktop {
+      width: 100%;
+      height: 100%;
+    }
+
+    .text-section {
+      max-width: 40%;
+    }
 
     .section {
-		display: flex;
+      display: flex;
       flex-direction: row;
       gap: var(--spacing-large);
+	  align-items: center;
     }
+
+    .section-2 {
+      display: flex;
+      flex-direction: row-reverse;
+      gap: var(--spacing-large);
+	  align-items: center;
+    }
+
+	.section-3 {
+		flex-direction: row;
+		gap: var(--spacing-medium);
+		align-items: center;
+	}
+	
+
   }
 
+  
   @media only screen and (max-width: 1000px) {
     .hide-mobile {
       display: none;
-    }
-
-	.image-container-desktop {
-		width: 350px;
-      height: 200px;
-	}
-
-	.image-desktop {
-      width: 100%;
-      height: 100%;
     }
   }
 </style>
