--- a/src/components/ui/Footer.astro
+++ b/src/components/ui/Footer.astro
@@ -74,6 +74,7 @@ padding: 30px;}
     padding: 10px;
     border-radius: 8px;
     border: 1px var(--color-black-ish) solid;
+    background-color: rgb(255, 228, 238, 0.75);
   }
 
   input[type="submit"] {
