corrected the order

--- a/src/pages/medier.astro
+++ b/src/pages/medier.astro
@@ -25,7 +25,9 @@ import Dropdown from "../components/ui/Dropdown.astro"
 		<a href="#"><ArticleCard header="Hvordan onanerer man?" category="Krop og sex" link="images/articleimages/banana.jpg" /></a>
 	</section>
 </div>
-
+<div class="medier-podcast-section">
+	<img src="images/articleimages/podcastimage.jpg" alt="podcastimage">
+	</div>
 <div class="medier-second-section">
 	<h2 class="sub-header-underlined">Tema: Venskaber og Familie</h2>
 	<div class="medier-second-grid">
@@ -53,9 +55,7 @@ import Dropdown from "../components/ui/Dropdown.astro"
 	</section>
 	</div>
 </div>
-<div class="medier-podcast-section">
-	<img src="images/articleimages/podcastimage.jpg" alt="podcastimage">
-	</div>
+
 
 </div>
 	</GirlsUniLayout>
@@ -114,6 +114,7 @@ import Dropdown from "../components/ui/Dropdown.astro"
 			flex-wrap: wrap;
 			justify-content: space-evenly;
 			gap: 20px;
+			width:auto;
 }
 
 /*SECOND SECTION*/ 
