--- a/src/pages/main.astro
+++ b/src/pages/main.astro
@@ -1,14 +1,14 @@
 ---
-import GirlsUniLayout from "../layouts/GirlsUniLayout.astro"
-
+import GirlsUniLayout from "../layouts/GirlsUniLayout.astro";
+import QuoteSection from "../components/ui/QuoteSection.astro";
 ---
 <GirlsUniLayout title="Pigeunivers">
 	<section class="gu-herosection">
-<img src="images/heroimages/girlsfrontpage.png" alt="Pigeunivers: billede og overskrift">
+<img src="images/heroimages/girlsfrontpage.png" alt="Pigeunivers billede og overskrift">
+</section>
 
+<QuoteSection color="pink" firstLine="Man føler sig ikke alene med de ting" secondLine="man kæmper med, når andre fortæller," thirdLine="de har det på samme måde"></QuoteSection>
 
-
-	</section>
 	</GirlsUniLayout>
 	<style>
 		.gu-herosection{
