--- a/src/components/ui/ColorSection.astro
+++ b/src/components/ui/ColorSection.astro
@@ -46,7 +46,7 @@ const { link, text, size = "m-small-d-large" } = Astro.props;
   }
 
   h2 {
-    padding: 5px 10px;
+    padding: 5px;
   }
 
   .color-background {
