--- a/src/pages/faellesskaber.astro
+++ b/src/pages/faellesskaber.astro
@@ -3,6 +3,7 @@ import GirlsUniLayout from "../layouts/GirlsUniLayout.astro";
 import QuoteSection from "../components/ui/QuoteSection.astro";
 import Button from "../components/ui/Button.astro";
 import ColorSection from "../components/ui/ColorSection.astro";
+import UnderlinedHeader from "../components/ui/UnderlinedHeader.astro";
 ---
 
 
@@ -13,17 +14,22 @@ import ColorSection from "../components/ui/ColorSection.astro";
       <p class="subheader">Sammen, er vi stærkere</p>
       <p>Vi giver dig et trygt rum med andre piger og unge kvinder, hvor vi taler om det, der fylder og styrker hinanden.</p>
       <p>På denne her side kan du finde et gruppeforløb, som passer til lige netop dig eller du kan læse om alle vores gruppetilbud.</p>
-      <QuoteSection firstLine="Man føler sig ikke alene med de ting" secondLine="man kæmper med, når andre fortæller," thirdLine="de har det på samme måde" color="pink" />
-      <h2 class="secondary-header">Læs om vores fællesskaber</h2>
+      <div class="quote-container">
+      <QuoteSection firstLine="Man føler sig ikke alene med de ting" secondLine="man kæmper med, når andre fortæller," thirdLine="de har det på samme måde" color="purple" />
+    </div>
     </section>
-    <p class="light-text">filtrér efter vores fællesskaber</p>
+    <div class="filters-container">
+      <h2 class="secondary-header">Læs om vores fællesskaber</h2>
+    <p class="label-text light-text">filtrér efter vores fællesskaber</p>
     <div class="filter-buttons-container">
       <Button text="All" style="color" size="m-small-d-large" />
       <Button text="13-16 år" style="color" size="m-small-d-large" />
       <Button text="16-24 år" style="color" size="m-small-d-large" />
     </div>
+  </div>
+    <div class="color-section-components-container">
     <ColorSection color="green" title="EmpowR" hex="#d1ff99" text="Timeld EmpowR" link="/">
-		<p slot="subheader">For dig mellem 13-16 år.</p>
+		<p slot="subheader" class="themeheader age-desc">For dig mellem 13-16 år</p>
       <p slot="description">
         I EmpowR mødes du med en lille gruppe piger mellem 13 og 16 år én gang om ugen i 10 uger tæt på, hvor du bor. I taler om alt det, der fylder. Det kan være venskaber, ensomhed, kærlighed og andre emner. Her vil du opdage, at der er så meget,
         som faktisk er helt normalt, at andre kan have det ligesom dig, og at det hjælper at tale om det.
@@ -31,7 +37,7 @@ import ColorSection from "../components/ui/ColorSection.astro";
       <p>To frivillige unge kvinder leder EmpowR og sørger for at det er trygt og rart at være med.</p>
     </ColorSection>
 	<ColorSection color="pink" title="Sisterhood" hex="#ffe4ee" text="Timeld Sisterhood" link="/">
-		<p slot="subheader">For dig mellem 18-24, som er indskrevet på en uddannelse.</p>
+		<p slot="subheader" class="themeheader age-desc">For dig mellem 18-24, som er indskrevet på en uddannelse</p>
 		<p slot="description">
 		  I EmpowR mødes du med en lille gruppe piger mellem 13 og 16 år én gang om ugen i 10 uger tæt på, hvor du bor. I taler om alt det, der fylder. Det kan være venskaber, ensomhed, kærlighed og andre emner. Her vil du opdage, at der er så meget,
 		  som faktisk er helt normalt, at andre kan have det ligesom dig, og at det hjælper at tale om det.
@@ -39,18 +45,19 @@ import ColorSection from "../components/ui/ColorSection.astro";
 		<p slot="description">To frivillige unge kvinder leder EmpowR og sørger for at det er trygt og rart at være med.</p>
 	  </ColorSection>
 	  <ColorSection color="purple" title="Velux" hex="#edcff8" text="Timeld Velux" link="/">
-		<p slot="subheader">For dig mellem 18-24, som ikke er indskrevet på en uddannelse.</p>
+		<p slot="subheader" class="themeheader age-desc">For dig mellem 18-24, som ikke er indskrevet på en uddannelse</p>
 		<p slot="description">
 		  I EmpowR mødes du med en lille gruppe piger mellem 13 og 16 år én gang om ugen i 10 uger tæt på, hvor du bor. I taler om alt det, der fylder. Det kan være venskaber, ensomhed, kærlighed og andre emner. Her vil du opdage, at der er så meget,
 		  som faktisk er helt normalt, at andre kan have det ligesom dig, og at det hjælper at tale om det.
 		</p>
 		<p slot="description">To frivillige unge kvinder leder EmpowR og sørger for at det er trygt og rart at være med.</p>
 	  </ColorSection>
+  </div>
   </GirlsUniLayout>
 </div>
 
 <style>
-  .Faelleskaber {
+  .color-section-components-container, .filters-container, .quote-container {
     width: 100%;
 	display: flex;
   flex-direction: column;
@@ -58,11 +65,26 @@ import ColorSection from "../components/ui/ColorSection.astro";
   }
   .filter-buttons-container {
     display: flex;
+    gap: 10px;
   }
 
   p.subheader {
-    margin-bottom: 40px;
+    margin-bottom: 20px;
   }
+
+  h1, h2 {
+    margin-bottom: 20px;
+  }
+
+  .age-desc {
+    padding: 5px;
+  }
+  .label-text {
+          margin-bottom: 10px;
+          font-family: var(--font-display);
+          color: var(--color-black-ish);
+          opacity: var(--opacity-75);
+        }
   @media only screen and (min-width: 600px) {
   .Faelleskaber {
 
