--- a/src/components/ui/Dropdown.astro
+++ b/src/components/ui/Dropdown.astro
@@ -6,13 +6,13 @@ import Button from "./Button.astro";
   
     <p class="label-text light-text hidetext">Filtrér efter tema</p>    
         <div class="desktopfilter">
-          <Button size="m-extra-small-d-medium" style="purple" text="Venskaber og familie" />
-          <Button size="m-extra-small-d-medium" style="purple" text="Krop og sex" />
-          <Button size="m-extra-small-d-medium" style="purple" text="Selvværd" />
-          <Button size="m-extra-small-d-medium" style="purple" text="Kærlighed" />
-          <Button size="m-extra-small-d-medium" style="purple" text="Trivsel" />
-          <Button size="m-extra-small-d-medium" style="purple" text="Skole og uddannelse" />
-          <Button size="m-extra-small-d-medium" style="purple" text="Andet" />
+          <Button size="m-extra-small-d-medium" style="color" text="Venskaber og familie" />
+          <Button size="m-extra-small-d-medium" style="color" text="Krop og sex" />
+          <Button size="m-extra-small-d-medium" style="color" text="Selvværd" />
+          <Button size="m-extra-small-d-medium" style="color" text="Kærlighed" />
+          <Button size="m-extra-small-d-medium" style="color" text="Trivsel" />
+          <Button size="m-extra-small-d-medium" style="color" text="Skole og uddannelse" />
+          <Button size="m-extra-small-d-medium" style="color" text="Andet" />
         </div>
   
 </div>
